--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>physics</title>
+
+        <title>physics-collisions</title>
+        <meta name="description" content="a physics collision simulation">
+        <link rel="icon" type="image/svg+xml" href="/icon.svg">
+        <link rel="apple-touch-icon" href="/icon-apple-touch-icon.png">
+        <link rel="mask-icon" href="/icon.svg" color="#2f4f4f">
+        <meta name="theme-color" content="#2f4f4f">
     </head>
     <body>
         <div id="app"></div>
