deploy: 284b6f01583a9cc6a382e3b8e080c86899a6cab4

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+        <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>physics</title>
+
+        <title>physics-collisions</title>
+        <meta name="description" content="a physics collision simulation">
+        <link rel="icon" type="image/svg+xml" href="./icon.svg">
+        <link rel="apple-touch-icon" href="./icon-apple-touch-icon.png">
+        <link rel="mask-icon" href="./icon.svg" color="#2f4f4f">
+        <meta name="theme-color" content="#2f4f4f">
       <script type="module" crossorigin src="./assets/index.1c3d1a75.js"></script>
       <link rel="stylesheet" href="./assets/index.2d0aaa9e.css">
-    </head>
+    <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="./registerSW.js"></script></head>
     <body>
         <div id="app"></div>
         
